# LogicDB

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md  benchmarks.json
data/workloads/: README.md
data/workloads/job/: job_workload.duckdb_valid_phased_1130.sample.jsonl
data/workloads/tpcds/: llmindexadvisor_tpcds_2k_phase_drift_repeat2.duckdb_valid_templated.sample.jsonl
data/workloads/tpch/: tpch_good17_phased_10000.sample.jsonl
docs/: architecture.md
examples/: build_demo_duckdb.py
scripts/: verify_openops.py
src/logicdb/: __init__.py  config.py  runner.py
src/logicdb/agent/: __init__.py  core.py  eval.py  olap_helpers.py  semantic_cache.py  tools.py
src/logicdb/cli/: main.py
src/logicdb/data/: __init__.py  loaders.py
src/logicdb/layout/: __init__.py  operators.py  planner.py  workload.py
src/logicdb/openops/: __init__.py  orchestrator.py
src/logicdb/physical/: __init__.py  cost_model.py  index_duckdb.py  mv_duckdb.py
src/logicdb/skills/: __init__.py  library.py  mine.py
tests/: test_openops_smoke.py
